finished new portfolio website

--- a/index.html
+++ b/index.html
@@ -66,7 +66,11 @@
             <div class="flex60">
               <div class = "content">
                 <h4>Tracker</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum fugit dicta omnis sed, quos beatae illo aliquid voluptatum iure sunt voluptate, nulla aspernatur cumque dignissimos dolorem in accusantium hic neque.</p>
+                <p>
+                  A web app designed to quickly create and manage data. Users 
+                  can quickly create projects and view data with their choice of four graph styles:
+                  Bar, Pie, Polar, and line.
+                </p>
                 <p class = "technologies">NodeJS | MongoDB | ReactJS</p>
                 <div class = "flex icons start">
                   <a class = "pointer" href="https://thetechiechart.herokuapp.com/"><i class="fas fa-external-link-alt"></i></a>
@@ -89,7 +93,9 @@
             <div class="flex60">
               <div class = "content">
                 <h4>E-commerce</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum fugit dicta omnis sed, quos beatae illo aliquid voluptatum iure sunt voluptate, nulla aspernatur cumque dignissimos dolorem in accusantium hic neque.</p>
+                <p>
+                  A modern minimalist E-commerce site. Focused on animations and user experience.
+                </p>
                 <p class = "technologies">NodeJS | MongoDB | ReactJS</p>
                 <div class = "flex icons end">
                   <a class = "pointer" href = "https://thetechiestore.herokuapp.com/"><i class="fas fa-external-link-alt"></i></a>
@@ -102,7 +108,10 @@
             <div class="flex60">
               <div class = "content">
                 <h4>High or Low</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum fugit dicta omnis sed, quos beatae illo aliquid voluptatum iure sunt voluptate, nulla aspernatur cumque dignissimos dolorem in accusantium hic neque.</p>
+                <p>
+                  Web version of a the card game "Higher or Lower". Users can create rooms, and play 
+                  versus their friends live.
+                </p>
                 <p class = "technologies">NodeJS | SocketIO | AngularJS</p>
                 <div class = "flex icons start">
                   <a class = "pointer" href = "https://high-or-low-game.herokuapp.com/"><i class="fas fa-external-link-alt"></i></a>
@@ -133,10 +142,10 @@
             </div>
             <div class = "flex60 content">
               <p data-aos="fade-left" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore nihil ipsam distinctio! Vitae necessitatibus in officiis fugit doloribus impedit reprehenderit nam, officia eos itaque veritatis aut nihil? Dicta, est in?
+                Hi! I'm Hans, a Software Engineering Student at Western University and a graduate from FlatIron School, a coding Bootcamp.
               </p>
               <p data-aos="fade-up" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt cupiditate, obcaecati ipsa veritatis officiis possimus, asperiores perspiciatis debitis ullam repudiandae itaque a vel accusamus eaque harum magni. Reiciendis, repellat repellendus?
+                I have always had a passion to make ideas a reality. With code, I have been able to make ideas tangible. I hope to continue to improving and learning in this ever changing field.
               </p>
               <div class = "flex justifyCenter">
                 <a class = "noUnderline" href = 'mailto:hanskrohn70@gmail.com'><button class = "pointer mobileButtons" data-aos="zoom-out-up" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">Get in Contact <i class="fa fa-envelope-o" aria-hidden="true"></i></button></a>
