--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <h3 data-aos="fade-right" data-aos-offset="200" data-aos-once="true">About</h3>
             <hr data-aos="fade-left" data-aos-offset="200" data-aos-once="true">
           </div>
-          <div class="flex spaceTop" id = "flexDirectionColumForMobile">
+          <div class="flex spaceTop width100" id = "flexDirectionColumForMobile">
             <div class = "flex40 flex">
               <div class = "image" data-aos="fade-right" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
                 <img src = "./ProfilePicture.jpg" alt = "Hans Krohn"/>
