updated the text

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
               <div class = "content">
                 <h4>Tracker</h4>
                 <p>
-                  A web app designed to quickly create and manage data. Users 
-                  can quickly create projects and view data with their choice of four graph styles:
+                  A web app I developed to help users quickly create and manage charts. Users 
+                  can quickly create projects and view the data with their choice of four graph styles:
                   Bar, Pie, Polar, and line.
                 </p>
                 <p class = "technologies">NodeJS | MongoDB | ReactJS</p>
@@ -94,7 +94,7 @@
               <div class = "content">
                 <h4>E-commerce</h4>
                 <p>
-                  A modern minimalist E-commerce site. Focused on animations and user experience.
+                  A tech e-commerce site I developed. I used this project to expand on my web development knowledge. I mainly focused on the user experience, by creating visually appealing animations.
                 </p>
                 <p class = "technologies">NodeJS | MongoDB | ReactJS</p>
                 <div class = "flex icons end">
@@ -143,9 +143,11 @@
             <div class = "flex60 content">
               <p data-aos="fade-left" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
                 Hi! I'm Hans, a Software Engineering Student at Western University and a graduate from FlatIron School, a coding Bootcamp.
+                I have always had a passion for solving problems and creating beautiful products. With code, I am able express my solution focused mindset, while expressing my creativity. 
               </p>
               <p data-aos="fade-up" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
-                I have always had a passion to make ideas a reality. With code, I have been able to make ideas tangible. I hope to continue to improving and learning in this ever changing field.
+                If you are interested, I welcome you to checkout my <a class = "colorGreen noUnderline" href = "https://medium.com/@hanskrohn70" >blog</a>. I write about tech related topics
+                that interest me and share things I have learnt. Beyond coding, I really enjoy playing video games and listening to music.
               </p>
               <div class = "flex justifyCenter">
                 <a class = "noUnderline" href = 'mailto:hanskrohn70@gmail.com'><button class = "pointer mobileButtons" data-aos="zoom-out-up" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">Get in Contact <i class="fa fa-envelope-o" aria-hidden="true"></i></button></a>
