added new project, update phone view, updated file structure

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type = "image/png" href="./logo.png"/>
+    <link rel="icon" type = "image/png" href="./images/logo.png"/>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -19,7 +19,7 @@
     <nav>
       <div class = "navigation flex">
         <div class = "logo">
-          <img class = "pointer" src = 'logo.png' alt = '>~hk72'/>
+          <img class = "pointer" src = './images/logo.png' alt = '>~hk72'/>
         </div>
         <div class = "webView">
           <ul class = "flex">
@@ -80,16 +80,32 @@
             </div>
             <div class="flex40 flex">
               <div class = "image">
-                <img src = "./tracker.png" alt = "Tracker"/>
+                <img src = "./images/tracker.png" alt = "Tracker"/>
               </div>
             </div>
           </div>
           <div id = "flexDirectionColumForMobile" class = "card flex" data-aos="fade-right" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
             <div class="flex40 flex">
               <div class = "image">
-                <img src = "./eccomerce.png" alt = "E-commerce"/>
+                <img src = "./images/Game Board.png" alt = "GameBoard"/>
               </div>
             </div>
+            <div class="flex60">
+              <div class = "content">
+                <h4>Game Board</h4>
+                <p>
+                  A simple Tic Tac Toe game where users can play in local match or against the computer. Currently, the game only has one level. 
+                  Using the Minimax algorithm the computer is sure to win or tie. Don't belive me, try it yourself!
+                </p>
+                <p class = "technologies">Vanilla JS | HTML | CSS</p>
+                <div class = "flex icons end">
+                  <a class = "pointer" href = "https://hk72.github.io/GameBoard/"><i class="fas fa-external-link-alt"></i></a>
+                  <a class = "pointer" href = "https://github.com/hk72/GameBoard"><i class="fa fa-github" aria-hidden="true"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div id = "flexDirectionColumForMobile" class = "card flex" data-aos="fade-left" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
             <div class="flex60">
               <div class = "content">
                 <h4>E-commerce</h4>
@@ -97,14 +113,24 @@
                   A tech e-commerce site I developed. I used this project to expand on my web development knowledge. I mainly focused on the user experience, by creating visually appealing animations.
                 </p>
                 <p class = "technologies">NodeJS | MongoDB | ReactJS</p>
-                <div class = "flex icons end">
+                <div class = "flex icons start">
                   <a class = "pointer" href = "https://thetechiestore.herokuapp.com/"><i class="fas fa-external-link-alt"></i></a>
                   <a class = "pointer" href = "https://github.com/hk72/TheTechieStore-FrontEnd"><i class="fa fa-github" aria-hidden="true"></i></a>
                 </div>
               </div>
             </div>
+            <div class="flex40 flex">
+              <div class = "image">
+                <img src = "./images/eccomerce.png" alt = "E-commerce"/>
+              </div>
+            </div>
           </div>
-          <div id = "flexDirectionColumForMobile" class = "card flex" data-aos="fade-left" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
+          <div id = "flexDirectionColumForMobile" class = "card flex" data-aos="fade-right" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
+            <div class="flex40 flex">
+              <div class = "image">
+                <img src = "./images/High or low.png" alt = "High or Low"/>
+              </div>
+            </div>
             <div class="flex60">
               <div class = "content">
                 <h4>High or Low</h4>
@@ -113,15 +139,10 @@
                   versus their friends live.
                 </p>
                 <p class = "technologies">NodeJS | SocketIO | AngularJS</p>
-                <div class = "flex icons start">
+                <div class = "flex icons end">
                   <a class = "pointer" href = "https://high-or-low-game.herokuapp.com/"><i class="fas fa-external-link-alt"></i></a>
                   <a class = "pointer" href = "https://github.com/hk72/HighOrLowFrontEnd"><i class="fa fa-github" aria-hidden="true"></i></a>
                 </div>
-              </div>
-            </div>
-            <div class="flex40 flex">
-              <div class = "image">
-                <img src = "./High or low.png" alt = "High or Low"/>
               </div>
             </div>
           </div>
@@ -137,7 +158,7 @@
           <div class="flex spaceTop width100" id = "flexDirectionColumForMobile">
             <div class = "flex40 flex">
               <div class = "image" data-aos="fade-right" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
-                <img src = "./ProfilePicture.jpg" alt = "Hans Krohn"/>
+                <img src = "./images/ProfilePicture.jpg" alt = "Hans Krohn"/>
               </div>
             </div>
             <div class = "flex60 content">
