updated project decription

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
               <div class = "content">
                 <h4>Game Board</h4>
                 <p>
-                  A simple Tic Tac Toe game where users can play in local match or against the computer. Currently, the game only has one level. 
-                  Using the Minimax algorithm the computer is sure to win or tie. Don't belive me, try it yourself!
+                  A simple Tic Tac Toe game where users can play in a local match or against the computer. Currently, the game only has one level. 
+                  Using the Minimax algorithm the computer is sure to win or tie. Don't belive me? Try it yourself!
                 </p>
                 <p class = "technologies">Vanilla JS | HTML | CSS</p>
                 <div class = "flex icons end">
