--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                   <div class = "content">
                     <h4>Microsoft Software Engineering Intern</h4>
                     <p>
-                        Worked closely with other engineers on the team to develop a UI for the project. The UI I created is currently the only way to visualize the project and will be a major developer tool moving forwards.
+                        Worked closely with other engineers on the team to develop a UI for the project. The UI I created is currently the only way to visualize the project and will be a major developer tool moving forward.
                     </p>
                     <p class = "technologies">May 2021 - August 2021</p>
                   </div>
