fix column location issues

--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
             <p>Software Engineering Bootcamp - May 2019 - August 2019</p>
           </div>
         </div>
+        </div>
         <div class = "subtitle flex" id = "skills">
           <div>
             <h3 data-aos="fade-right" data-aos-offset="200" data-aos-once="true">Skills</h3>
