--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <p class = "technologies">NodeJS | MongoDB | ReactJS</p>
                 <div class = "flex icons start">
                   <a class = "pointer" href="https://thetechiechart.herokuapp.com/"><i class="fas fa-external-link-alt"></i></a>
-                  <a class = "pointer" href = "https://github.com/hk72/Tracker-Frontend"><i class="fa fa-github" aria-hidden="true"></i></a>
+                  <a class = "pointer" href = "https://github.com/hanskrohn/Tracker-Frontend"><i class="fa fa-github" aria-hidden="true"></i></a>
                 </div>
               </div>
             </div>
@@ -136,8 +136,8 @@
                 </p>
                 <p class = "technologies">Vanilla JS | HTML | CSS</p>
                 <div class = "flex icons end">
-                  <a class = "pointer" href = "https://hk72.github.io/GameBoard/"><i class="fas fa-external-link-alt"></i></a>
-                  <a class = "pointer" href = "https://github.com/hk72/GameBoard"><i class="fa fa-github" aria-hidden="true"></i></a>
+                  <a class = "pointer" href = "https://hanskrohn.github.io/GameBoard/"><i class="fas fa-external-link-alt"></i></a>
+                  <a class = "pointer" href = "https://github.com/hanskrohn/GameBoard"><i class="fa fa-github" aria-hidden="true"></i></a>
                 </div>
               </div>
             </div>
@@ -152,7 +152,7 @@
                 <p class = "technologies">NodeJS | MongoDB | ReactJS</p>
                 <div class = "flex icons start">
                   <a class = "pointer" href = "https://thetechiestore.herokuapp.com/"><i class="fas fa-external-link-alt"></i></a>
-                  <a class = "pointer" href = "https://github.com/hk72/TheTechieStore-FrontEnd"><i class="fa fa-github" aria-hidden="true"></i></a>
+                  <a class = "pointer" href = "https://github.com/hanskrohn/TheTechieStore-FrontEnd"><i class="fa fa-github" aria-hidden="true"></i></a>
                 </div>
               </div>
             </div>
@@ -178,13 +178,13 @@
                 <p class = "technologies">NodeJS | SocketIO | AngularJS</p>
                 <div class = "flex icons end">
                   <a class = "pointer" href = "https://high-or-low-game.herokuapp.com/"><i class="fas fa-external-link-alt"></i></a>
-                  <a class = "pointer" href = "https://github.com/hk72/HighOrLowFrontEnd"><i class="fa fa-github" aria-hidden="true"></i></a>
+                  <a class = "pointer" href = "https://github.com/hanskrohn/HighOrLowFrontEnd"><i class="fa fa-github" aria-hidden="true"></i></a>
                 </div>
               </div>
             </div>
           </div>
           <div class = "flex justifyCenter">
-            <a class = "noUnderline" href = "https://github.com/hk72"><button class = "pointer mobileButtons" data-aos="zoom-out-up" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">Visit Github <i class="fa fa-github" aria-hidden="true"></i></button></a>
+            <a class = "noUnderline" href = "https://github.com/hanskrohn"><button class = "pointer mobileButtons" data-aos="zoom-out-up" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">Visit Github <i class="fa fa-github" aria-hidden="true"></i></button></a>
           </div>
         </div>
         <div class = "subtitle flex" id = "about">
@@ -267,7 +267,7 @@
           </div>
         </div>
        <div class = "footer flex justifyCenter">
-         <a class = "pointer noUnderline" href = "https://github.com/hk72/hk72.github.io"><p>Developed by Hans Krohn <i class="fa fa-github" aria-hidden="true"></i></p></a>
+         <a class = "pointer noUnderline" href = "https://github.com/hanskrohn/hanskrohn.github.io"><p>Developed by Hans Krohn <i class="fa fa-github" aria-hidden="true"></i></p></a>
        </div>
        <div class = "aside">
          <div class = "format" id = "aside">
