Updates to profile

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
             <div class = "flex60 content">
               <p data-aos="fade-left" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
-                Hi! I'm Hans, a Software Engineering Student at Western University and a graduate from FlatIron School, a coding Bootcamp.
+                Hi! I'm Hans, a Software Engineering at Microsoft and a graduate from Western University and FlatIron School, a coding Bootcamp.
                 I have always had a passion for solving problems and creating beautiful products. With code, I am able express my solution focused mindset, while expressing my creativity. 
               </p>
               <p data-aos="fade-up" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
@@ -81,7 +81,7 @@
           </div>
           <div class = "education" data-aos="fade-right" data-aos-offset="200" data-aos-once="true">
             <h4>Western University - London ON</h4>
-            <p>Bachelor of Software Engineering - May 2022 (Expected Graduation Date)</p>
+            <p>Bachelor of Software Engineering - May 2022</p>
             <h4>FlatIron School - Houston TX</h4>
             <p>Software Engineering Bootcamp - May 2019 - August 2019</p>
           </div>
