updated bio, thanks chat gpt

--- a/index.html
+++ b/index.html
@@ -61,12 +61,10 @@
             </div>
             <div class = "flex60 content">
               <p data-aos="fade-left" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
-                Hi! I'm Hans, a Software Engineering at Microsoft and a graduate from Western University and FlatIron School, a coding Bootcamp.
-                I have always had a passion for solving problems and creating beautiful products. With code, I am able express my solution focused mindset, while expressing my creativity. 
+                Hi there! My name is Hans, and I'm a software engineer at Microsoft. I graduated from Western University and completed a coding bootcamp at FlatIron School, where I honed my skills and developed my passion for problem-solving and creating beautiful products. With my focus on solutions, I use code to express my creativity and bring my ideas to life.
               </p>
               <p data-aos="fade-up" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
-                If you are interested, I welcome you to checkout my <a class = "colorGreen noUnderline" href = "https://medium.com/@hanskrohn70" >blog</a>. I write about tech related topics
-                that interest me and share things I have learnt. Beyond coding, I really enjoy playing video games and listening to music.
+                If you're interested, I invite you to check out my <a class = "colorGreen noUnderline" href = "https://medium.com/@hanskrohn70" >blog</a> where I write about tech-related topics that fascinate me and share my latest learnings. Beyond coding, I'm an avid video gamer and love exploring new music.
               </p>
               <div class = "flex justifyCenter">
                 <a class = "noUnderline" href = 'mailto:hanskrohn70@gmail.com'><button class = "pointer mobileButtons" data-aos="zoom-out-up" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">Get in Contact <i class="fa fa-envelope-o" aria-hidden="true"></i></button></a>
