--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 If you're interested, I invite you to check out my <a class = "colorGreen noUnderline" href = "https://medium.com/@hanskrohn70" >blog</a> where I write about tech-related topics that fascinate me and share my latest learnings. Beyond coding, I'm an avid video gamer and love exploring new music.
               </p>
               <div class = "flex justifyCenter">
-                <a class = "noUnderline" href = 'mailto:hanskrohn70@gmail.com'><button class = "pointer mobileButtons" data-aos="zoom-out-up" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">Get in Contact <i class="fa fa-envelope-o" aria-hidden="true"></i></button></a>
+                <a class = "noUnderline" href = 'mailto:hanskrohn70@outlook.com'><button class = "pointer mobileButtons" data-aos="zoom-out-up" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">Get in Contact <i class="fa fa-envelope-o" aria-hidden="true"></i></button></a>
               </div>
             </div>
           </div>
